--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Eletrônicos minerim</title>
 </head>
 
 <body>
@@ -53,4 +53,5 @@
 </body>
 
 <script src="script.js"></script>
+
 </html>
